# nanonav

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: history.json
checkpoints_path/: best.pt
docs/: IMPLEMENTATION-NOTES.md  TRAINING-GUIDE.md  TRM-DEBUG-PLAN.md  TRM-EXPERIMENTS.md
patches/: 0001-Expose-gradient-carrying-hidden-states.patch  0002-Enable-grad-on-all-TRM-recursion-steps.patch
scripts/: debug_trm.py  generate_dataset.py  generate_path_dataset.py  run_benchmark.py  test_astar_visual.py  test_trm_visual.py  visualization_demo.py
tests/: __init__.py  run_all_tests.py  test_a_star.py  test_dataset.py  test_end_to_end.py  test_fallback_training.py  test_map_generator.py  test_model.py
trm_nav/: __init__.py  a_star.py  dataset.py  debug.py  evaluate.py  map_generator.py  model.py  train.py  train_path.py  visualize.py
trm_nav/official_trm/: __init__.py  navigation_trm.py  navigation_trm_submodule.py  trm.py
